fix: Header nav misclick due to visibility in mobiles

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,6 +40,7 @@ html {
 	.nav-open {
 		max-height: 150px;
 		opacity: 1;
+		display: block;
 		transition:
 			max-height 0.5s ease-in-out,
 			opacity 0.5s ease-in-out;
@@ -47,6 +48,7 @@ html {
 
 	.nav-closed {
 		max-height: 0;
+		display: none;
 		opacity: 0;
 		transition:
 			max-height 0.5s ease-in-out,
